vm参数打印过程